--- a/style.css
+++ b/style.css
@@ -3,9 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=MuseoModerno:wght@900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Alkatra:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Alkatra:wght@700&family=Comfortaa:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Signika:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik+Maps&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -55,10 +53,9 @@ body, .container, .video-controls, .video-timer, .options {
     top: 35px;
     align-items: center;
     justify-content: center;    
-    font-family: 'Alkatra', system-ui;
-    font-family: 'Comfortaa', sans-serif;
-    font-weight: bolder;
-}
+    font-family: 'Rubik Maps', system-ui;
+    font-weight: 100 ;  
+  }
 .tit img{
   position: absolute;
   left: 30%;
@@ -279,6 +276,8 @@ body, .container, .video-controls, .video-timer, .options {
     
     top: 20%;
     font-size: 15px;
+    font-family: 'Rubik Maps', system-ui;
+    font-weight: 100 ;  
   }
   .tit img{
     width: 100px;
